<resources>
    <string name="app_name">Coin Bag</string>
    <string name="_3rd_party">3rd Party</string>
    <string name="apache_v2">Apache License v2.0</string>
    <string name="mit">MIT License</string>
    <string name="app_intro">AppIntro - Apache License 2.0</string>
    <string name="retrofit">Retrofit - Apache License 2.0</string>
    <string name="about_page_lib">About-Page - MIT License</string>
    <string name="ok">OK</string>
    <string name="about_item">About</string>

    <string name="donate_btc">18Tqqf3eyrJoY6a3mAiQ5rWbCRCqxMe5cY</string>
    <string name="donate_ltc">LRJXggi6DNd6yUgg9xPjhtTpw2xfZSJBjG</string>
    <string name="donate_eth">0xe7a4421f081557f98f7522888602cef164a6c060</string>

    <string name="cc0_license">
        "\n%1$s, %2$s\n"

        "\nThe person or persons who have associated work with this document"
        "(the "Dedicator" or "Certifier") hereby either (a) certifies that,"
        "to the best of his knowledge, the work of authorship identified is in the public domain"
        "of the country from which the work is published, or"
        "(b) hereby dedicates whatever copyright the dedicators holds in the work of authorship"
        "identified below (the "Work") to the public domain. A certifier, moreover, dedicates any"
        "copyright interest he may have in the associated work, and for these purposes,"
        "is described as a "dedicator" below.\n"

        "\nA certifier has taken reasonable steps to verify the copyright status of this work."
        "Certifier recognizes that his good faith efforts may not shield him from liability"
        "if in fact the work certified is not in the public domain.\n"

        "\nDedicator makes this dedication for the benefit of the public at large"
        "and to the detriment of the Dedicator's heirs and successors."
        "Dedicator intends this dedication to be an overt act of relinquishment in perpetuity"
        "of all present and future rights under copyright law, whether vested or contingent, in the Work."
        "Dedicator understands that such relinquishment of all rights includes the relinquishment"
        "of all rights to enforce (by lawsuit or otherwise) those copyrights in the Work.\n"

        "\nDedicator recognizes that, once placed in the public domain, the Work may be freely reproduced,"
        "distributed, transmitted, used, modified, built upon, or otherwise exploited by anyone for any purpose,"
        "commercial or non-commercial, and in any way,"
        "including by methods that have not yet been invented or conceived."
    </string>

    <string name="sil_open_font_license">
        "\nCopyright © %1$s, %2$s\n"

        "\nThis Font Software is licensed under the SIL Open Font License, Version 1.1."
        "This license is copied below, and is also available with a FAQ at:"
        "http://scripts.sil.org/OFL\n"

        "\nSIL OPEN FONT LICENSE Version 1.1 - 26 February 2007\n"

        "\nThe goals of the Open Font License (OFL) are to stimulate worldwide"
        "development of collaborative font projects, to support the font creation"
        "efforts of academic and linguistic communities, and to provide a free and"
        "open framework in which fonts may be shared and improved in partnership"
        "with others.\n"

        "\nThe OFL allows the licensed fonts to be used, studied, modified and"
        "redistributed freely as long as they are not sold by themselves. The"
        "fonts, including any derivative works, can be bundled, embedded,"
        "redistributed and/or sold with any software provided that any reserved"
        "names are not used by derivative works. The fonts and derivatives,"
        "however, cannot be released under any other type of license. The"
        "requirement for fonts to remain under this license does not apply"
        "to any document created using the fonts or their derivatives."
    </string>
    <string name="change_log">Change Log</string>
    <string name="add_acc_type">Type</string>
    <string name="add_acc_address_text">Address</string>
    <string name="add_acc_cancel">Cancel</string>
    <string name="add_acc_save">Save</string>
    <string name="refresh_menu_item">Refresh</string>
    <string name="add_acc_name_text">Name</string>
    <string name="add_acc_balance_label">Balance</string>
    <string name="delete_edit_menu">Delete</string>
    <string name="add_new_menu_item">Add new</string>
</resources>
