<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="uk.co.richyhbm.coinbag.activities.AddAccountActivity">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mal_baseline_half"
        android:padding="@dimen/mal_baseline_half"
        app:cardCornerRadius="@dimen/mal_card_radius"
        app:cardElevation="@dimen/mal_card_elevation"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="uk.co.richyhbm.coinbag.activities.AddAccountActivity">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/add_acc_type_image"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/add_acc_type_text"
                        android:layout_width="0px"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:layout_weight="0.25"
                        android:gravity="center_vertical|start"
                        android:text="@string/add_acc_type"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Spinner
                        android:id="@+id/add_acc_type_spinner"
                        android:layout_width="0px"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:layout_weight="0.75"
                        android:drawSelectorOnTop="true"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintLeft_toRightOf="@+id/add_acc_type_text"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/add_acc_name_text"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="0.25"
                        android:gravity="center_vertical|start"
                        android:text="@string/add_acc_name_text"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/add_acc_name_entry_area"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="0.75"
                        android:ems="10"
                        android:inputType="text|textAutoCorrect" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/add_acc_address_text"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="0.25"
                        android:gravity="center_vertical|start"
                        android:text="@string/add_acc_address_text"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/add_acc_address_entry_area"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="0.75"
                        android:ems="10"
                        android:inputType="textMultiLine" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <Button
                        android:id="@+id/add_acc_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/add_acc_cancel"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/add_acc_save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/add_acc_save"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>

            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/scan_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_menu_camera"
        app:elevation="6dp"
        app:fabSize="normal"
        app:pressedTranslationZ="12dp"
        app:useCompatPadding="true" />

</android.support.design.widget.CoordinatorLayout>
